<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_margin_8">

        <TextView
            android:layout_width="@dimen/product_additional_information_section_text_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/share" />

        <ImageView
            style="@style/SocietyIcon"
            android:src="@drawable/ic_society_f" />

        <ImageView
            style="@style/SocietyIcon"
            android:src="@drawable/ic_society_in" />

        <ImageView
            style="@style/SocietyIcon"
            android:src="@drawable/ic_society_g" />

        <ImageView
            style="@style/SocietyIcon"
            android:src="@drawable/ic_society_t" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_margin_8">

        <TextView
            android:layout_width="@dimen/product_additional_information_section_text_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/rules" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/rules_description_example" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_margin_8">

        <TextView
            android:layout_width="@dimen/product_additional_information_section_text_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/time_description_example" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_margin_8">

        <TextView
            android:layout_width="@dimen/product_additional_information_section_text_width"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/pay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/pay_description_example" />

    </LinearLayout>


</LinearLayout>