<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".sign_in.SignInActivity">

    <ImageView
        android:layout_width="@dimen/product_image_height"
        android:layout_height="@dimen/product_image_height"
        android:layout_margin="@dimen/base_margin_8"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_margin_16"
        android:fontFamily="@font/maven_pro_bold"
        android:text="@string/app_description"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />

    <TextView
        style="@style/ActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin_8"
        android:text="@string/sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/textInputLayoutWidth"
        android:layout_height="@dimen/textInputLayoutHeight"
        android:layout_margin="@dimen/base_margin_8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/base_margin_24"
            android:fontFamily="@font/maven_pro_regular"
            android:hint="@string/input_username_hint"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/textInputLayoutWidth"
        android:layout_height="@dimen/textInputLayoutHeight"
        android:layout_margin="@dimen/base_margin_8"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_pass_word_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:drawablePadding="@dimen/base_margin_24"
            android:fontFamily="@font/maven_pro_regular"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin_8"
        android:fontFamily="@font/maven_pro_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_sign_in_button"
        android:layout_width="@dimen/textInputLayoutWidth"
        android:layout_height="@dimen/textInputLayoutHeight"
        android:fontFamily="@font/maven_pro_regular"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="@dimen/textInputLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin_8"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_margin_4"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/or"
            android:textAllCaps="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_margin_4"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/have_not_account" />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/maven_pro_regular"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>